# biz-map-system-movil

./: .gitignore  MIGRATION.md  README.md
BizMapAndroid/: .gitignore  settings.gradle.kts
BizMapAndroid/app/: CMakeLists.txt  build.gradle.kts
BizMapAndroid/app/src/androidTest/java/com/aisoldev/bizmap/: ExampleInstrumentedTest.kt
BizMapAndroid/app/src/main/: AndroidManifest.xml
BizMapAndroid/app/src/main/cpp/: jni_bridge.cpp
BizMapAndroid/app/src/main/java/com/aisoldev/bizmap/: BizMapClient.kt  MainActivity.kt
BizMapAndroid/app/src/main/java/com/aisoldev/bizmap/data/: BizMapClient.kt
BizMapAndroid/app/src/main/java/com/aisoldev/bizmap/data/api/: AuthInterceptor.kt  BizMapApi.kt
BizMapAndroid/app/src/main/java/com/aisoldev/bizmap/data/models/: ApiError.kt  AuthResponse.kt  Business.kt  GeoLocation.kt  LoginRequest.kt  Product.kt  ProductWithBusiness.kt  RegisterRequest.kt  SearchHistoryEntry.kt  User.kt  UserRecommendations.kt
BizMapAndroid/app/src/main/res/layout/: activity_main.xml
BizMapAndroid/app/src/main/res/values/: strings.xml  themes.xml
BizMapAndroid/app/src/main/res/values-night/: themes.xml
BizMapAndroid/app/src/test/java/com/aisoldev/bizmap/: ExampleUnitTest.kt
BizMapAndroid/gradle/: libs.versions.toml
BizMapAndroid/gradle/wrapper/: gradle-wrapper.properties
cpp-lib/: .gitignore  CMakeLists.txt  README.md
cpp-lib/cmake/: BizMapConfig.cmake.in
cpp-lib/examples/: CMakeLists.txt  basic_example.cpp  c_api_example.cpp
cpp-lib/include/bizmap/: api_client.h  bizmap.h  bizmap_c_api.h  callbacks.h  models.h
cpp-lib/platform/android/: README.md
cpp-lib/platform/ios/: README.md
cpp-lib/src/: api_client.cpp  bizmap_c_api.cpp  http_client.cpp  http_client.h  json_converters.cpp  json_converters.h
